flatten public directory, add base plugin

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -10,7 +10,7 @@
     <meta name="description" content="{{ description or metadata.description }}" />
     <script>document.documentElement.classList.add('js')</script>
 
-    <link rel="stylesheet" href="{{ "public/styles/main.css" | url }}" />
+    <link rel="stylesheet" href="styles/main.css" />
   </head>
 
   <body>
@@ -23,5 +23,5 @@
     </main>
   </body>
 
-  <script src="{{ "public/scripts/site.js" | url }}"></script>
+  <script src="scripts/site.js"></script>
 </html>
