--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -10,11 +10,13 @@
     <meta name="description" content="{{ description or metadata.description }}" />
     <script>document.documentElement.classList.add('js')</script>
 
-    <link rel="stylesheet" href="styles/main.css" />
+    {% for stylesheet in page.styles %}
+    <link rel="stylesheet" href="{{ stylesheet }}" />
+    {% endfor %}
   </head>
 
   <body>
-    <a href="#main" class="visually-hidden">Skip to main content</a>
+    <a href="#main" class="skip-to-content-link">Skip to main content</a>
 
     {% include "site-header.njk" %}
 
@@ -23,5 +25,7 @@
     </main>
   </body>
 
-  <script src="scripts/site.js"></script>
+  {% for script in page.scripts %}
+  <script src="{{ script }}"></script>
+  {% endfor %}
 </html>
