--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,24 @@
-html {
-  color-scheme: light dark;
+:root {
+  --gnav-height: 70px;
+  --bgc: #000;
+  --color: #fff;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 body {
   font-family: system-ui;
   font-size: 1.25rem;
   line-height: 1.5;
+  background-color: var(--bgc);
+  color: var(--color);
+  margin: 0;
+  padding: var(--gnav-height) 0 0;
+  -wedkit-font-smoothing: antialias;
 }
 
 img,
@@ -15,9 +28,24 @@ video {
   display: block;
 }
 
-main {
+.skip-to-content-link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(-100%);
+}
+
+.skip-to-content-link:focus {
+  transform: translateY(0);
+}
+
+.article {
   max-width: min(70ch, 100% - 4rem);
   margin-inline: auto;
+}
+
+a {
+  color: rgb(158, 158, 255);
 }
 
 .visually-hidden {
@@ -30,15 +58,34 @@ main {
   width: 1px;
 }
 
-nav ul {
-  display: block;
-  list-style: none;
+.site-header {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  background-color: var(--bgc);
+  z-index: 2;
 }
 
-nav li {
+.gnav ul {
+  display: block;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  line-height: var(--gnav-height);
+  text-align: center;
+  background-color: var(--bgc);
+}
+
+/* TODO: dropdowns? */
+.gnav ul ul {
+  display: none;
+}
+
+.gnav li {
   display: inline-block;
 }
 
-nav li a {
+.gnav li a {
   padding: 0 10px;
 }
